# fire2api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  alembic.ini  compose.yaml  main.py  pyproject.toml  requirements-runtime.txt  requirements.txt  version.py
app/: __init__.py  main.py  ui.py  ui_components.py
app/admin/: __init__.py  router.py
app/core/: __init__.py  access_key_service.py  audit.py  auth_middleware.py  auth_service.py  database.py  dynamic_loader.py  execution_service.py  idempotency.py  middleware.py  migrations.py  models.py  query_service.py  rate_limit.py  settings.py
app/schemas/: access_key.py  query.py
app/utils/: __init__.py  response.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_core.py  test_execution_and_idempotency.py  test_http.py  test_migrations_and_auth.py  test_ui.py  test_version.py  ui_main.py
