[project]
name = "fire2api"
version = "0.0.3"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app/core"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E501", "S101", "S104"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = ["migrations/versions"]
